@@ -1,0 +1,3 @@
+[ req ]
+default_bits = 384
+
